--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lodash": "^4.17.10",
     "vee-validate": "^2.1.0-beta.6",
     "vue": "^2.5.16",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-rc.5",
